# rust-server-client

./: Cargo.toml  README.md
src/client/: main.rs
src/server/: main.rs
