[package]
name = "rust-server-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
actix-web = "4.0.0-rc.1"
actix-session = "0.5.0-beta.7"
serde = { version = "1.0", features = ["derive"] }
