[package]
name = "rust-server-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
# server
actix-web = "4.0.0-rc.1"
actix-session = "0.5.0-beta.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# client
# surf = "2.3.2"
#
# hyper = { version = "0.14", features = ["full"] }
# tokio = { version = "1", features = ["full"] }
# async-std = { version = "1.6.0", default-features = false, features = ["std"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }